A small step closer to modularity
Updated build script and added main barriers to modularity.
Updated module-info.java files, but these are still inactive.
Improved javadoc generation; gradlew javadoc now gives a meaningful (albeit not-fully-linked) output.